syntax = "proto3";

package todo.services;

option go_package = "api/protos/services;todopb";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "api/protos/common/enums.proto";
import "api/protos/common/errors.proto";
import "api/protos/common/messages.proto";
import "api/protos/common/pagination.proto";

// File Service - Handles file uploads to object storage
service FileService {
  // Get upload pre-signed URL - Core method: client uploads directly to S3 etc.
  rpc GetUploadUrl(GetUploadUrlRequest) returns (GetUploadUrlResponse) {
    option (google.api.http) = {
      post: "/v1/files/upload-url"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get upload URL"
      description: "Get pre-signed URL for direct upload to object storage"
    };
  }

  // 确认上传完成
  rpc CompleteUpload(CompleteUploadRequest) returns (CompleteUploadResponse) {
    option (google.api.http) = {
      post: "/v1/files/complete-upload"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Complete upload"
      description: "Confirm file upload completion and create file record"
    };
  }

  // 分片上传初始化
  rpc InitiateMultipartUpload(InitiateMultipartUploadRequest) returns (InitiateMultipartUploadResponse) {
    option (google.api.http) = {
      post: "/v1/files/multipart/initiate"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Initiate multipart upload"
      description: "Initiate multipart upload for large files"
    };
  }

  // 获取分片上传URL
  rpc GetMultipartUploadUrl(GetMultipartUploadUrlRequest) returns (GetMultipartUploadUrlResponse) {
    option (google.api.http) = {
      post: "/v1/files/multipart/upload-url"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get multipart upload URL"
      description: "Get pre-signed URL for multipart upload part"
    };
  }

  // 完成分片上传
  rpc CompleteMultipartUpload(CompleteMultipartUploadRequest) returns (CompleteMultipartUploadResponse) {
    option (google.api.http) = {
      post: "/v1/files/multipart/complete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Complete multipart upload"
      description: "Complete multipart upload and merge parts"
    };
  }

  // 获取文件信息
  rpc GetFile(GetFileRequest) returns (GetFileResponse) {
    option (google.api.http) = {
      get: "/v1/files/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get file"
      description: "Get file metadata by ID"
    };
  }

  // 获取下载URL
  rpc GetDownloadUrl(GetDownloadUrlRequest) returns (GetDownloadUrlResponse) {
    option (google.api.http) = {
      get: "/v1/files/{id}/download-url"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get download URL"
      description: "Get pre-signed URL for file download"
    };
  }

  // 删除文件
  rpc DeleteFile(DeleteFileRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/files/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete file"
      description: "Delete file by ID"
    };
  }

  // 列出文件
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {
    option (google.api.http) = {
      get: "/v1/files"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "List files"
      description: "List files with filtering and pagination"
    };
  }

  // 生成缩略图
  rpc GenerateThumbnail(GenerateThumbnailRequest) returns (GenerateThumbnailResponse) {
    option (google.api.http) = {
      post: "/v1/files/{id}/thumbnail"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Generate thumbnail"
      description: "Generate thumbnail for image/video"
    };
  }

  // 转码视频（处理4分钟限制）
  rpc TranscodeVideo(TranscodeVideoRequest) returns (TranscodeVideoResponse) {
    option (google.api.http) = {
      post: "/v1/files/{id}/transcode"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Transcode video"
      description: "Transcode video to different formats/resolutions (supports up to 4-minute videos)"
    };
  }
}

// File metadata
message FileMetadata {
  string id = 1;
  string name = 2;
  string original_name = 3;
  common.FileType type = 4;
  string mime_type = 5;
  int64 size = 6;  // File size in bytes
  string storage_key = 7;  // Key in object storage
  string bucket = 8;  // Storage bucket name
  string url = 9;  // Public access URL
  string thumbnail_url = 10;
  string preview_url = 11;

  // Video/audio specific fields
  optional int32 duration = 12;  // Duration in seconds - max 240s for videos (4 minutes)
  optional int32 width = 13;     // Width in pixels
  optional int32 height = 14;    // Height in pixels
  optional string video_codec = 15;
  optional string audio_codec = 16;

  // Metadata
  string uploaded_by = 17;
  string todo_id = 18;
  string list_id = 19;
  string comment_id = 20;
  string team_id = 21;
  map<string, string> metadata = 22;

  // Timestamps
  google.protobuf.Timestamp uploaded_at = 23;
  google.protobuf.Timestamp expires_at = 24;
  google.protobuf.Timestamp deleted_at = 25;
}

// 请求/响应消息
message GetUploadUrlRequest {
  string filename = 1;
  string mime_type = 2;
  int64 size = 3;  // 文件大小
  common.FileType file_type = 4;

  // 关联信息
  optional string todo_id = 5;
  optional string list_id = 6;
  optional string comment_id = 7;
  optional string team_id = 8;

  // 验证信息
  optional string checksum = 9;  // MD5或SHA256
  map<string, string> metadata = 10;

  // 视频限制：不超过4分钟（240秒）
  optional int32 max_duration_seconds = 11; // default is 4 minutes
}

message GetUploadUrlResponse {
  string upload_url = 1;  // 预签名上传URL
  string file_id = 2;     // 临时文件ID
  string upload_id = 3;   // 上传ID（用于分片上传）
  google.protobuf.Timestamp expires_at = 4;  // URL过期时间
  map<string, string> headers = 5;  // 需要包含的HTTP头
}

message CompleteUploadRequest {
  string file_id = 1;
  string upload_id = 2;
  string checksum = 3;  // 文件校验和
  int64 size = 4;       // 实际文件大小
  map<string, string> metadata = 5;
}

message CompleteUploadResponse {
  FileMetadata file = 1;
}

message GetFileRequest {
  string id = 1;
}

message GetFileResponse {
  FileMetadata file = 1;
}

message GetDownloadUrlRequest {
  string id = 1;
  optional int32 expires_in = 2;  // URL有效期（秒）
  optional bool inline = 3;  // 是否内联显示
}

message GetDownloadUrlResponse {
  string download_url = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message DeleteFileRequest {
  string id = 1;
  optional bool permanent = 2;  // 是否永久删除
}

message ListFilesRequest {
  optional string todo_id = 1;
  optional string list_id = 2;
  optional string comment_id = 3;
  optional string team_id = 4;
  optional string uploaded_by = 5;
  optional common.FileType type = 6;
  optional google.protobuf.Timestamp uploaded_after = 7;
  optional google.protobuf.Timestamp uploaded_before = 8;
  int32 page_size = 9;
  string page_token = 10;
}

message ListFilesResponse {
  repeated FileMetadata files = 1;
  common.PaginationInfo pagination = 2;
  int64 total_size = 3;  // 总文件大小（字节）
}

message GenerateThumbnailRequest {
  string id = 1;
  optional int32 width = 2;
  optional int32 height = 3;
  optional string format = 4;  // jpeg, png, webp, default: jpeg
}

message GenerateThumbnailResponse {
  string thumbnail_url = 1;
  int32 width = 2;
  int32 height = 3;
  int64 size = 4;
}

message TranscodeVideoRequest {
  string id = 1;
  optional common.VideoFormat target_format = 2;
  optional common.VideoQuality target_quality = 3;
  optional int32 target_width = 4;
  optional int32 target_height = 5;
  optional int32 target_bitrate = 6;
}

message TranscodeVideoResponse {
  string transcoded_url = 1;
  string preview_url = 2;
  string thumbnail_url = 3;
  int32 duration = 4;
  int32 width = 5;
  int32 height = 6;
  int64 size = 7;
}

// 分片上传相关消息
message InitiateMultipartUploadRequest {
  string filename = 1;
  string mime_type = 2;
  int64 size_bytes = 3;
  common.FileType file_type = 4;
  optional string todo_id = 5;
  optional string list_id = 6;
  map<string, string> metadata = 7;
}

message InitiateMultipartUploadResponse {
  string file_id = 1;
  string upload_id = 2;
  google.protobuf.Timestamp expires_at = 3;
  int32 part_size = 4;
}

message GetMultipartUploadUrlRequest {
  string file_id = 1;
  string upload_id = 2;
  int32 part_number = 3;
  int64 part_size = 4;
}

message GetMultipartUploadUrlResponse {
  string upload_url = 1;
  int32 part_number = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message CompleteMultipartUploadRequest {
  string file_id = 1;
  string upload_id = 2;
  repeated PartETag parts = 3;
  string checksum = 4;
}

message PartETag {
  int32 part_number = 1;
  string etag = 2;
}

message CompleteMultipartUploadResponse {
  FileMetadata file = 1;
}